# physics-engine

./: CMakeLists.txt  LICENSE  README.md
include/: arena.hpp  engine.hpp  rigidbody.hpp  scene.hpp  shape.hpp  shapes.hpp  solver.hpp  transform.hpp  ui_handler.hpp
src/: arena.cpp  engine.cpp  main.cpp  rigidbody.cpp  scene.cpp  shapes.cpp  solver.cpp  transform.cpp  ui_handler.cpp
